Sidebar - Aggiunta voce utility

--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -137,6 +137,13 @@
             Nuovo trasferimento
           </a>
         </li>
+        <li class="app-sidebar__heading">UTILITY</li>
+        <li>
+          <a [routerLink]='["/utility"]'>
+            <i class="metismenu-icon pe-7s-graph2"></i>
+            Utility
+          </a>
+        </li>
       </ul>
     </div>
   </div>
