--- a/FrontEnd/ClientApp/src/app/utility/utility.component.html
+++ b/FrontEnd/ClientApp/src/app/utility/utility.component.html
@@ -12,6 +12,7 @@
                           </div>  
                     </div>
                     <div class="card-body">
+                        <p>Importa da file Excel le squadre.</p>
                         <button class="btn btn-primary" (click)="importTeams()">Importa</button>
                     </div>
                 </div>
@@ -49,5 +50,5 @@
             </div>
         </div>
     </div>
-  </div>
+</div>
   
