--- a/FrontEnd/ClientApp/src/app/home/home.component.html
+++ b/FrontEnd/ClientApp/src/app/home/home.component.html
@@ -36,7 +36,7 @@
                   <td class="text-center">{{rank.games}}</td>
                   <td class="text-center">{{rank.wins}}</td>
                   <td class="text-center">{{rank.draws}}</td>
-                  <td class="text-center">{{rank.loses}}</td>
+                  <td class="text-center">{{rank.losts}}</td>
                   <td class="text-center">{{rank.goalMade}}</td>
                   <td class="text-center">{{rank.goalConceded}}</td>
                   <td class="text-center">{{rank.goalDifference}}</td>
