--- a/FrontEnd/ClientApp/src/app/game/game.component.html
+++ b/FrontEnd/ClientApp/src/app/game/game.component.html
@@ -77,7 +77,7 @@
               </div>
               <div class="col-md-4 mb-3">
                 <label for="validationCustom03">Giornata</label>
-                <input type="text" class="form-control" id="validationCustom04" placeholder="Data" [(ngModel)]="date" name="date" #ctrl="ngModel" required>
+                <input type="date" class="form-control" id="validationCustom04" placeholder="Data" [(ngModel)]="date" name="date" #ctrl="ngModel" required>
                 <div class="invalid-feedback">
                   Please provide a valid city.
                 </div>
@@ -86,82 +86,12 @@
           </fieldset>
 
           <!-- button -->
-          <!--<button class="btn btn-primary mr-2" type="submit" (click)="save()" *ngIf="!isReadOnly">Salva</button>
+          <button class="btn btn-primary mr-2" type="submit" (click)="save(false)" *ngIf="!isReadOnly">Salva</button>
+          <button class="btn btn-primary mr-2" type="submit" (click)="save(true)" *ngIf="!isReadOnly">Salva + Vai Info</button>
           <button class="btn btn-danger mr-2" type="submit" (click)="undo()" *ngIf="!isReadOnly">Annulla</button>
 
-          <button class="btn btn-primary mr-5" type="submit" (click)="update()" *ngIf="isReadOnly">Modifica</button>-->
+          <button class="btn btn-primary mr-5" type="submit" (click)="update()" *ngIf="isReadOnly">Modifica</button>
         </form>
-      </div>
-    </div>
-
-    <!-- altre informazioni -->
-    <div class="main-card mb-3 card">
-      <div class="card-body">
-        <!-- header del tab -->
-        <ul class="body-tabs body-tabs-layout tabs-animated body-tabs-animated nav mb-3">
-          <li class="nav-item">
-            <a role="tab" class="nav-link active show" id="tab-1" data-toggle="tab" href="#tab-content-1">
-              <span>Squadra Casa</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a role="tab" class="nav-link" id="tab-2" data-toggle="tab" href="#tab-content-2">
-              <span>Squadra Trasferta</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a role="tab" class="nav-link" id="tab-3" data-toggle="tab" href="#tab-content-3">
-              <span>Marcatori</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a role="tab" class="nav-link" id="tab-3" data-toggle="tab" href="#tab-content-3">
-              <span>Cambi</span>
-            </a>
-          </li>
-        </ul>
-
-        <!-- contenuto del tab -->
-        <div class="tab-content">
-
-          <!-- tab 1 -->
-          <div class="tab-pane tabs-animation fade" id="tab-content-1" role="tabpanel">
-            <div class="row" style="background-color:red">
-              <p>TAB 1</p>
-            </div>
-          </div>
-
-          <!-- tab 2 -->
-          <div class="tab-pane tabs-animation fade" id="tab-content-2" role="tabpanel">
-            <div class="row" style="background-color:blue">
-              <p>TAB 1</p>
-            </div>
-          </div>
-
-          <!-- tab 3 -->
-          <div class="tab-pane tabs-animation fade" id="tab-content-3" role="tabpanel">
-            <div class="row" style="background-color:green">
-              <p>TAB 3</p>
-            </div>
-          </div>
-
-          <!-- tab 4 -->
-          <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
-            <div class="row" style="background-color:green">
-              <p>TAB 4</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- button -->
-    <div class="main-card mb-3 card">
-      <div class="card-body">
-        <button class="btn btn-primary mr-2" type="submit" (click)="save()" *ngIf="!isReadOnly">Salva</button>
-        <button class="btn btn-danger mr-2" type="submit" (click)="undo()" *ngIf="!isReadOnly">Annulla</button>
-
-        <button class="btn btn-primary mr-5" type="submit" (click)="update()" *ngIf="isReadOnly">Modifica</button>
       </div>
     </div>
   </div>
