--- a/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
+++ b/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
@@ -8,7 +8,7 @@
             </i>
           </div>
           <div>
-            {{game.name}}
+            {{game.teamHome}} - {{game.teamAway}}
           </div>          
         </div>
       </div>
@@ -17,8 +17,7 @@
       <div class="card-body">
         <h5 class="card-title">INFORMAZIONI PARTITA</h5>
     </div>
-
-    <!-- altre informazioni -->
+    
     <div class="main-card mb-3 card">
       <div class="card-body">
         <!-- header del tab -->
@@ -50,16 +49,14 @@
 
           <!-- tab 1 -->
           <div class="tab-pane tabs-animation fade show active" id="tab-content-1" role="tabpanel">
-            <div class="row" style="background-color:red">
-              <div class="row">
-                <div class="col-md-8">
-                  <select name="select-team-old" id="select-role" class="form-control" [(ngModel)]="selectedTeam">
-                    <option *ngFor="let t of teams" [value]="t.id">{{t.name}}</option>
-                  </select>
-                </div>
-                <div class="col-md-2">
-                  <button class="btn btn-primary">New</button>
-                </div>
+            <div class="row">
+              <div class="col-md-8">
+                <select name="select-team-old" id="select-role" class="form-control" [(ngModel)]="selectedPlayer">
+                  <option *ngFor="let t of playersHome" [value]="p.id">{{p.fullname}}</option>
+                </select>
+              </div>
+              <div class="col-md-2">
+                <button class="btn btn-primary">New</button>
               </div>
             </div>
           </div>
