--- a/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
+++ b/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
@@ -50,9 +50,9 @@
           <!-- tab 1 -->
           <div class="tab-pane tabs-animation fade show active" id="tab-content-1" role="tabpanel">
             <div class="row">
-              <div class="col-md-8">
+              <div class="col-md-4">
                 <select name="select-team-old" id="select-role" class="form-control" [(ngModel)]="selectedPlayer">
-                  <option *ngFor="let t of playersHome" [value]="p.id">{{p.fullname}}</option>
+                  <option *ngFor="let p of playersHome" [value]="p.lastname">{{p.fullname}}</option>
                 </select>
               </div>
               <div class="col-md-2">
