--- a/FrontEnd/ClientApp/src/app/game/game.component.html
+++ b/FrontEnd/ClientApp/src/app/game/game.component.html
@@ -93,10 +93,10 @@
 
           <!-- button -->
           <button class="btn btn-primary mr-2" type="submit" (click)="save()" *ngIf="!isReadOnly">Salva</button>
-          <button class="btn btn-primary mr-2" type="submit" (click)="info()" *ngIf="!isReadOnly">Info</button>
           <button class="btn btn-danger mr-2" type="submit" (click)="undo()" *ngIf="!isReadOnly">Annulla</button>
 
-          <button class="btn btn-primary mr-5" type="submit" (click)="update()" *ngIf="isReadOnly">Modifica</button>
+          <button class="btn btn-primary mr-2" type="submit" (click)="update()" *ngIf="isReadOnly">Modifica</button>
+          <button class="btn btn-primary mr-2" type="submit" (click)="updateInfo()" *ngIf="isReadOnly">Modifica Info</button>
         </form>
       </div>
     </div>
