--- a/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
+++ b/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
@@ -7,92 +7,79 @@
             <i class="lnr-picture text-danger">
             </i>
           </div>
-          <div>
+          <div *ngIf="game">
             {{game.teamHome}} - {{game.teamAway}}
-          </div>          
+          </div>
         </div>
       </div>
     </div>
     <div class="main-card mb-3 card">
       <div class="card-body">
         <h5 class="card-title">INFORMAZIONI PARTITA</h5>
-    </div>
-    
-    <div class="main-card mb-3 card">
-      <div class="card-body">
-        <!-- header del tab -->
-        <ul class="body-tabs body-tabs-layout tabs-animated body-tabs-animated nav mb-3">
-          <li class="nav-item">
-            <a role="tab" class="nav-link active show" id="tab-1" data-toggle="tab" href="#tab-content-1">
-              <span>{{game.teamHome}}</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a role="tab" class="nav-link" id="tab-2" data-toggle="tab" href="#tab-content-2">
-              <span>{{game.teamAway}}</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a role="tab" class="nav-link" id="tab-3" data-toggle="tab" href="#tab-content-3">
-              <span>Marcatori</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a role="tab" class="nav-link" id="tab-3" data-toggle="tab" href="#tab-content-3">
-              <span>Sostituzioni</span>
-            </a>
-          </li>
-        </ul>
+      </div>
 
-        <!-- contenuto del tab -->
-        <div class="tab-content">
+      <div class="main-card mb-3 card">
+        <div class="card-body">
+          <!-- header del tab -->
+          <ul class="body-tabs body-tabs-layout tabs-animated body-tabs-animated nav mb-3">
+            <li class="nav-item">
+              <a role="tab" class="nav-link active show" id="tab-1" data-toggle="tab" href="#tab-content-1">
+                <span *ngIf="game">{{game.teamHome}}</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a role="tab" class="nav-link" id="tab-2" data-toggle="tab" href="#tab-content-2">
+                <span *ngIf="game">{{game.teamAway}}</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a role="tab" class="nav-link" id="tab-4" data-toggle="tab" href="#tab-content-4">
+                <span>Marcatori</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a role="tab" class="nav-link" id="tab-5" data-toggle="tab" href="#tab-content-5">
+                <span>Sostituzioni</span>
+              </a>
+            </li>
+          </ul>
 
-          <!-- tab 1 -->
-          <div class="tab-pane tabs-animation fade show active" id="tab-content-1" role="tabpanel">
-            <div class="row">
-              <div class="col-md-4">
-                <select name="select-team-old" id="select-role" class="form-control" [(ngModel)]="selectedPlayer">
-                  <option *ngFor="let p of playersHome" [value]="p.lastname">{{p.fullname}}</option>
-                </select>
-              </div>
-              <div class="col-md-2">
-                <button class="btn btn-primary">New</button>
+          <!-- contenuto del tab -->
+          <div class="tab-content">
+
+            <!-- tab 1 -->
+            <div class="tab-pane tabs-animation fade show active" id="tab-content-1" role="tabpanel">
+              <div class="row" style="background-color:red">
+                <div class="col-md-6">
+                  <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="selectedPlayer" (change)="onChange($event)">
+                    <option *ngFor="let p of playersHome" [value]="p.id">{{p.fullname}}</option>
+                  </select>
+                </div>
               </div>
             </div>
-          </div>
 
-          <!-- tab 2 -->
-          <div class="tab-pane tabs-animation fade" id="tab-content-2" role="tabpanel">
-            <div class="row" style="background-color:blue">
-              <p>TAB 2</p>
+            <!-- tab 2 -->
+            <div class="tab-pane tabs-animation fade" id="tab-content-2" role="tabpanel">
+              <div class="row" style="background-color:deepskyblue">
+                TAB 2
+              </div>
             </div>
-          </div>
 
-          <!-- tab 3 -->
-          <div class="tab-pane tabs-animation fade" id="tab-content-3" role="tabpanel">
-            <div class="row" style="background-color:green">
-              <p>TAB 3</p>
+            <!-- tab 4 -->
+            <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
+              <div class="row" style="background-color:yellow">
+                <p>TAB 4</p>
+              </div>
             </div>
-          </div>
 
-          <!-- tab 4 -->
-          <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
-            <div class="row" style="background-color:green">
-              <p>TAB 4</p>
+            <!-- tab 5 -->
+            <div class="tab-pane tabs-animation fade" id="tab-content-5" role="tabpanel">
+              <div class="row" style="background-color:pink">
+                TAB 5
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-
-    <!-- button -->
-    <div class="main-card mb-3 card">
-      <div class="card-body">
-        <button class="btn btn-primary mr-2" type="submit" (click)="save()" *ngIf="!isReadOnly">Salva</button>
-        <button class="btn btn-danger mr-2" type="submit" (click)="undo()" *ngIf="!isReadOnly">Annulla</button>
-
-        <button class="btn btn-primary mr-5" type="submit" (click)="update()" *ngIf="isReadOnly">Modifica</button>
-      </div>
-    </div>
   </div>
 </div>
