--- a/FrontEnd/ClientApp/src/app/home/home.component.html
+++ b/FrontEnd/ClientApp/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="app-main__inner">
 
     <!-- CLASSIFICA -->
-    <div class="row">
+    <div class="row mt-5">
       <div class="col-md-12">
         <div class="main-card mb-3 card">
           <div class="card-header">
