--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -67,6 +67,12 @@
         </li>
         <li class="app-sidebar__heading">CAMPIONATO</li>
         <li>
+          <a [routerLink]='["/game/create"]'>
+            <i class="metismenu-icon pe-7s-mouse"></i>
+            Nuova partita
+          </a>
+        </li>
+        <li>
           <a href="forms-controls.html">
             <i class="metismenu-icon pe-7s-mouse"></i>
             Calendario
