--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -99,7 +99,7 @@
 
           <!-- tab 1 -->
           <div class="tab-pane tabs-animation fade show active" id="tab-content-1" role="tabpanel">
-            <div class="row">
+            <div class="row" *ngIf="players.lenght > 0">
               <div class="table-responsive">
                 <table class="align-middle mb-0 table table-borderless table-striped table-hover">
                   <thead>
@@ -142,6 +142,9 @@
                   </tbody>
                 </table>
               </div>
+            </div>
+            <div class="row" *ngIf="players.length == 0">
+              {{messageNoPlayer}}
             </div>
           </div>
 
@@ -279,7 +282,7 @@
         </div>
         <div class="modal-body">
           <p class="mb-0">
-            {{errorMessage}}
+            {{messageError}}
           </p>
         </div>
         <div class="modal-footer">
