--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -150,7 +150,7 @@
 
           <!-- tab 2 -->
           <div class="tab-pane tabs-animation fade" id="tab-content-2" role="tabpanel">
-            <div class="row">
+            <div class="row" *ngIf="games.length > 0">
               <table class="mb-0 table table-sm">
                 <tbody>
                   <tr *ngFor="let g of games">
@@ -167,6 +167,9 @@
                 </tbody>
               </table>
             </div>
+            <div class="row" *ngIf="games.length == 0">
+              {{messageNoGame}}
+            </div>
           </div>
 
           <!-- tab 4 -->
@@ -178,7 +181,7 @@
 
           <!-- tab 5 -->
           <div class="tab-pane tabs-animation fade" id="tab-content-5" role="tabpanel">
-            <div class="row">
+            <div class="row" *ngIf="transfers.length > 0">
               <div class="col-md-12">
                 <div class="mb-3 card">
                   <div class="card-header-tab card-header">
@@ -263,6 +266,9 @@
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="row" *ngIf="transfers.length == 0">
+              {{messageNoTransfers}}
             </div>
           </div>
         </div>
