--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -174,8 +174,11 @@
 
           <!-- tab 4 -->
           <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
-            <div class="row" style="background-color:yellow">
-              <p>TAB 4</p>
+            <div class="row">
+              <!--<p>TAB 4</p>-->
+              <div style="height: 100px; width: 100px">
+                <canvas id="chart-statistics" width="200" height="100"></canvas>
+              </div>
             </div>
           </div>
 
@@ -254,6 +257,7 @@
                                 <td class="text-center">{{tOut.teamOld}}</td>
                                 <!--<td class="text-center">{{tOut.teamNew}}</td>-->
                                 <td class="text-center">{{tOut.date}}</td>
+                                ex
                                 <td class="text-center">
                                   <button type="button" id="PopoverCustomT-1" class="btn btn-primary btn-sm" (click)="detailPlayer(tOut.idPlayer)">Details</button>
                                 </td>
