--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -176,13 +176,13 @@
           <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
             <div class="row">
               <div class="col-md-4">
-                <canvas id="chart-statistics" width="200" height="100"></canvas>
+                <canvas id="chart-games" width="200" height="100"></canvas>
               </div>
               <div class="col-md-4">
-                <canvas id="chart-statistics" width="200" height="100"></canvas>
+                <canvas id="chart-games-home" width="200" height="100"></canvas>
               </div>
               <div class="col-md-4">
-                <canvas id="chart-statistics" width="200" height="100"></canvas>
+                <canvas id="chart-games-away" width="200" height="100"></canvas>
               </div>
             </div>
           </div>
