Game - WIP formazioni

--- a/FrontEnd/ClientApp/src/app/game/game.component.html
+++ b/FrontEnd/ClientApp/src/app/game/game.component.html
@@ -121,7 +121,7 @@
                 <td>AMM</td>
                 <td>ESP</td>
               </tr>
-              <tr *ngFor="let p of playersHome">
+              <tr *ngFor="let p of game.playersHome">
                 <td>{{p.fullname}}</td>
                 <td>{{p.gols}}</td>
                 <td>{{p.changeOut}}</td>
