--- a/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
+++ b/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
@@ -51,7 +51,7 @@
             <div class="tab-pane tabs-animation fade show active" id="tab-content-1" role="tabpanel">
               <div class="row" style="background-color:red">
                 <div class="col-md-6">
-                  <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="selectedPlayer" (change)="onChange($event)">
+                  <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="selectedPlayer" (change)="onChange($event)" *ngFor="let num of numbers">
                     <option *ngFor="let p of playersHome" [value]="p.id">{{p.fullname}}</option>
                   </select>
                 </div>
