--- a/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
+++ b/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
@@ -50,8 +50,8 @@
             <!-- tab 1 -->
             <div class="tab-pane tabs-animation fade show active" id="tab-content-1" role="tabpanel">
               <div class="row" style="background-color:red">
-                <div class="col-md-6">
-                  <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="selectedPlayer" (change)="onChange($event)" *ngFor="let num of numbers">
+                <div class="col-md-6" *ngFor="let item of items; let i = index">                  
+                  <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="selectedPlayers[i]" (change)="onChange($event)">
                     <option *ngFor="let p of playersHome" [value]="p.id">{{p.fullname}}</option>
                   </select>
                 </div>
