Team - Aggiunti chart gols

--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -185,6 +185,17 @@
                 <canvas id="chart-games-away" width="200" height="100"></canvas>
               </div>
             </div>
+            <div class="row">
+              <div class="col-md-4">
+                <canvas id="chart-gols" width="200" height="100"></canvas>
+              </div>
+              <div class="col-md-4">
+                <canvas id="chart-gols-home" width="200" height="100"></canvas>
+              </div>
+              <div class="col-md-4">
+                <canvas id="chart-gols-away" width="200" height="100"></canvas>
+              </div>
+            </div>
           </div>
 
           <!-- tab 5 -->
