--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -99,7 +99,7 @@
 
           <!-- tab 1 -->
           <div class="tab-pane tabs-animation fade show active" id="tab-content-1" role="tabpanel">
-            <div class="row" *ngIf="players.lenght > 0">
+            <div class="row">
               <div class="table-responsive">
                 <table class="align-middle mb-0 table table-borderless table-striped table-hover">
                   <thead>
@@ -185,7 +185,7 @@
                 <canvas id="chart-games-away" width="200" height="100"></canvas>
               </div>
             </div>
-            <div class="row">
+            <div class="row mt-2">
               <div class="col-md-4">
                 <canvas id="chart-gols" width="200" height="100"></canvas>
               </div>
