--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -35,7 +35,7 @@
         <li class="app-sidebar__heading">Dashboards</li>
         <li>
           <a [routerLink]='[""]'>
-            <i class="metismenu-icon fa fa-bath"></i>
+            <i class="metismenu-icon fas fa-chart-bar"></i>
             Dashboard
           </a>
         </li>
