--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -176,23 +176,29 @@
           <div class="tab-pane tabs-animation fade" id="tab-content-3" role="tabpanel">
             <div class="row">
               <div class="col-md-4">
+                <h3 class="text-center">Partite</h3>
                 <canvas id="chart-games" width="200" height="100"></canvas>
               </div>
               <div class="col-md-4">
+                <h3 class="text-center">Partite in casa</h3>
                 <canvas id="chart-games-home" width="200" height="100"></canvas>
               </div>
               <div class="col-md-4">
+                <h3 class="text-center">Partite in trasferta</h3>
                 <canvas id="chart-games-away" width="200" height="100"></canvas>
               </div>
             </div>
             <div class="row mt-2">
               <div class="col-md-4">
+                <h3 class="text-center">Goal</h3>
                 <canvas id="chart-gols" width="200" height="100"></canvas>
               </div>
               <div class="col-md-4">
+                <h3 class="text-center">Goal Casa</h3>
                 <canvas id="chart-gols-home" width="200" height="100"></canvas>
               </div>
               <div class="col-md-4">
+                <h3 class="text-center">Goal Trasferta</h3>
                 <canvas id="chart-gols-away" width="200" height="100"></canvas>
               </div>
             </div>
