Fix statistiche giocatore

--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -131,8 +131,8 @@
                       <td>{{player.roleString}}</td>
                       <td>{{player.feetString}}</td>
                       <td>{{player.lastTeamString}}</td>
-                      <td>1</td>
-                      <td>0</td>
+                      <td>{{player.countPresences}}</td>
+                      <td>{{player.countGols}}</td>
                       <td>
                         <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailPlayer(player.id)">
                           <i class="pe-7s-pen"></i>
