--- a/FrontEnd/ClientApp/src/app/app.component.html
+++ b/FrontEnd/ClientApp/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-nav-menu></app-nav-menu>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-3">
+      <div *ngIf="router.url != '/login'" class="col-lg-3">
         <app-sidebar></app-sidebar>
       </div>
       <div class="col-lg-8">
