--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -46,7 +46,7 @@
             Tutte le squadre
           </a>
         </li>
-        <li>
+        <li *ngIf="!readOnly">
           <a [routerLink]='["/team/create"]'>
             <i class="metismenu-icon pe-7s-car"></i>
             Nuova squadra
@@ -59,14 +59,14 @@
             Tutti i giocatori
           </a>
         </li>
-        <li>
+        <li *ngIf="!readOnly">
           <a [routerLink]='["/player/create"]'>
             <i class="metismenu-icon pe-7s-car"></i>
             Nuovo giocatore
           </a>
         </li>
         <li class="app-sidebar__heading">CAMPIONATO</li>
-        <li>
+        <li *ngIf="!readOnly">
           <a [routerLink]='["/game/create"]'>
             <i class="metismenu-icon pe-7s-mouse"></i>
             Nuova partita
