--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -144,7 +144,7 @@
           </a>
         </li>
         <li class="app-sidebar__heading">UTILITY</li>
-        <li>
+        <li *ngIf="!readOnly">
           <a [routerLink]='["/utility"]'>
             <i class="metismenu-icon pe-7s-graph2"></i>
             Utility
