--- a/FrontEnd/ClientApp/src/app/home/home.component.html
+++ b/FrontEnd/ClientApp/src/app/home/home.component.html
@@ -73,7 +73,7 @@
                   <td class="text-left">{{game.teamAway}}</td>
                   <td>
                     <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailGame(game.idGame)">
-                      <i class="pe-7s-pen"></i>
+                      <i class="fas fa-search"></i>
                     </button>
                   </td>
                 </tr>
