--- a/FrontEnd/ClientApp/src/app/player/player.component.html
+++ b/FrontEnd/ClientApp/src/app/player/player.component.html
@@ -125,7 +125,7 @@
         <div class="tab-content">
 
           <!-- tab 1 -->
-          <div class="tab-pane tabs-animation fade" id="tab-content-1" role="tabpanel">
+          <div class="tab-pane tabs-animation fade show active" id="tab-content-1" role="tabpanel">
             <div class="row" style="background-color:red">
               <p>TAB 1</p>
             </div>
@@ -134,7 +134,7 @@
           <!-- tab 2 -->
           <div class="tab-pane tabs-animation fade" id="tab-content-2" role="tabpanel">
             <div class="row" style="background-color:blue">
-              <p>TAB 1</p>
+              <p>TAB 2</p>
             </div>
           </div>
 
