--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -42,47 +42,47 @@
         <li class="app-sidebar__heading">SQUADRE</li>
         <li>
           <a [routerLink]='["/teams"]'>
-            <i class="metismenu-icon pe-7s-diamond"></i>
+            <i class="metismenu-icon fas fa-bookmark"></i>
             Tutte le squadre
           </a>
         </li>
         <li *ngIf="!readOnly">
           <a [routerLink]='["/team/create"]'>
-            <i class="metismenu-icon pe-7s-car"></i>
+            <i class="metismenu-icon fas fa-plus"></i>
             Nuova squadra
           </a>
         </li>
         <li class="app-sidebar__heading">GIOCATORI</li>
         <li>
           <a [routerLink]='["/players"]'>
-            <i class="metismenu-icon pe-7s-display2"></i>
+            <i class="metismenu-icon fas fa-users"></i>
             Tutti i giocatori
           </a>
         </li>
         <li *ngIf="!readOnly">
           <a [routerLink]='["/player/create"]'>
-            <i class="metismenu-icon pe-7s-car"></i>
+            <i class="metismenu-icon fas fa-user-plus"></i>
             Nuovo giocatore
           </a>
         </li>
         <li class="app-sidebar__heading">CAMPIONATO</li>
         <li *ngIf="!readOnly">
           <a [routerLink]='["/game/create"]'>
-            <i class="metismenu-icon pe-7s-mouse"></i>
+            <i class="metismenu-icon fas fa-plus"></i>
             Nuova partita
           </a>
         </li>
         <li>
           <a href="forms-controls.html">
-            <i class="metismenu-icon pe-7s-mouse"></i>
+            <i class="metismenu-icon fas fa-calendar"></i>
             Calendario
           </a>
         </li>
         <li>
           <a href="forms-layouts.html">
-            <i class="metismenu-icon pe-7s-eyedropper"></i>
+            <i class="metismenu-icon fas fa-chart-bar"></i>
             Classifica
-            <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
+            <i class="metismenu-state-icon fas fa-angle-down"></i>
           </a>
           <ul>
             <li>
@@ -119,34 +119,34 @@
         </li>
         <li>
           <a href="forms-validation.html">
-            <i class="metismenu-icon pe-7s-pendrive"></i>
+            <i class="metismenu-icon fas fa-futbol"></i>
             Marcatori
           </a>
         </li>
         <li class="app-sidebar__heading">GIUDICE SPORTIVO</li>
         <li>
           <a href="charts-chartjs.html">
-            <i class="metismenu-icon pe-7s-graph2"></i>
+            <i class="metismenu-icon fas fa-fill"></i>
             Disciplinare
           </a>
         </li>
         <li class="app-sidebar__heading">TRASFERIMENTI</li>
         <li>
           <a [routerLink]='["/transfers"]'>
-            <i class="metismenu-icon pe-7s-graph2"></i>
+            <i class="metismenu-icon fas fa-exchange-alt"></i>
             Tutti i trasferimenti
           </a>
         </li>
         <li>
           <a [routerLink]='["/transfer/create"]'>
-            <i class="metismenu-icon pe-7s-graph2"></i>
+            <i class="metismenu-icon fas fa-plus"></i>
             Nuovo trasferimento
           </a>
         </li>
         <li class="app-sidebar__heading">UTILITY</li>
         <li *ngIf="!readOnly">
           <a [routerLink]='["/utility"]'>
-            <i class="metismenu-icon pe-7s-graph2"></i>
+            <i class="metismenu-icon fas fa-tools"></i>
             Utility
           </a>
         </li>
