--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -135,7 +135,7 @@
                       <td>{{player.countGols}}</td>
                       <td>
                         <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailPlayer(player.id)">
-                          <i class="pe-7s-pen"></i>
+                          <i class="fas fa-search"></i>
                         </button>
                       </td>
                     </tr>
@@ -160,7 +160,7 @@
                     <td class="text-left">{{g.teamAway}}</td>
                     <td>
                       <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailGame(g.idGame)">
-                        <i class="pe-7s-pen"></i>
+                        <i class="fas fa-search"></i>
                       </button>
                     </td>
                   </tr>
@@ -176,29 +176,30 @@
           <div class="tab-pane tabs-animation fade" id="tab-content-3" role="tabpanel">
             <div class="row">
               <div class="col-md-4">
-                <h3 class="text-center">Partite</h3>
+                <h5 class="text-center">Partite</h5>
                 <canvas id="chart-games" width="200" height="100"></canvas>
               </div>
               <div class="col-md-4">
-                <h3 class="text-center">Partite in casa</h3>
+                <h5 class="text-center">Partite in casa</h5>
                 <canvas id="chart-games-home" width="200" height="100"></canvas>
               </div>
               <div class="col-md-4">
-                <h3 class="text-center">Partite in trasferta</h3>
+                <h5 class="text-center">Partite in trasferta</h5>
                 <canvas id="chart-games-away" width="200" height="100"></canvas>
               </div>
             </div>
+            <hr />
             <div class="row mt-2">
               <div class="col-md-4">
-                <h3 class="text-center">Goal</h3>
+                <h5 class="text-center">Goal</h5>
                 <canvas id="chart-gols" width="200" height="100"></canvas>
               </div>
               <div class="col-md-4">
-                <h3 class="text-center">Goal Casa</h3>
+                <h5 class="text-center">Goal Casa</h5>
                 <canvas id="chart-gols-home" width="200" height="100"></canvas>
               </div>
               <div class="col-md-4">
-                <h3 class="text-center">Goal Trasferta</h3>
+                <h5 class="text-center">Goal Trasferta</h5>
                 <canvas id="chart-gols-away" width="200" height="100"></canvas>
               </div>
             </div>
