--- a/FrontEnd/ClientApp/src/app/teams/teams.component.html
+++ b/FrontEnd/ClientApp/src/app/teams/teams.component.html
@@ -45,7 +45,7 @@
                   <td class="text-center">{{team.category}}</td>
                   <td class="text-center">
                     <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailTeam(team.id)">
-                      <i class="pe-7s-pen"></i>
+                      <i class="fas fa-search"></i>
                     </button>
                   </td>
                 </tr>
