--- a/FrontEnd/ClientApp/src/app/game/game.component.html
+++ b/FrontEnd/ClientApp/src/app/game/game.component.html
@@ -62,21 +62,21 @@
             <div class="form-row">
               <div class="col-md-3 mb-3">
                 <label for="validationCustom03">Modulo Casa</label>
-                <input type="text" class="form-control" id="validationCustom04" placeholder="Modulo Casa" [(ngModel)]="moduleHome" name="moduleHome" #ctrl="ngModel" required>
+                <input type="text" class="form-control" id="validationCustom04" placeholder="" [(ngModel)]="moduleHome" name="moduleHome" #ctrl="ngModel" required>
                 <div class="invalid-feedback">
                   Please provide a valid city.
                 </div>
               </div>
               <div class="col-md-3 mb-3">
                 <label for="validationCustom03">Modulo Trasferta</label>
-                <input type="text" class="form-control" id="validationCustom04" placeholder="Modulo Trasferta" [(ngModel)]="moduleAway" name="moduleAway" #ctrl="ngModel" required>
+                <input type="text" class="form-control" id="validationCustom04" placeholder="" [(ngModel)]="moduleAway" name="moduleAway" #ctrl="ngModel" required>
                 <div class="invalid-feedback">
                   Please provide a valid city.
                 </div>
               </div>
               <div class="col-md-2 mb-3">
                 <label for="validationCustom03">Giornata</label>
-                <input type="text" class="form-control" id="validationCustom04" placeholder="Giornata" [(ngModel)]="round" name="round" #ctrl="ngModel" required>
+                <input type="text" class="form-control" id="validationCustom04" placeholder="" [(ngModel)]="round" name="round" #ctrl="ngModel" required>
                 <div class="invalid-feedback">
                   Please provide a valid city.
                 </div>
