--- a/FrontEnd/ClientApp/src/app/player/player.component.html
+++ b/FrontEnd/ClientApp/src/app/player/player.component.html
@@ -26,21 +26,21 @@
             <div class="form-row">
               <div class="col-md-4 mb-3">
                 <label for="validationCustom01">Cognome</label>
-                <input type="text" class="form-control" id="validationCustom01" placeholder="Cognome" [(ngModel)]="lastname" name="lastname" #ctrl="ngModel" required>
+                <input type="text" class="form-control" id="validationCustom01" placeholder="" [(ngModel)]="lastname" name="lastname" #ctrl="ngModel" required>
                 <div class="valid-feedback">
                   Looks good!
                 </div>
               </div>
               <div class="col-md-4 mb-3">
                 <label for="validationCustom02">Nome</label>
-                <input type="text" class="form-control" id="validationCustom02" placeholder="Nome" [(ngModel)]="firstname" name="firstname" #ctrl="ngModel" required>
+                <input type="text" class="form-control" id="validationCustom02" placeholder="" [(ngModel)]="firstname" name="firstname" #ctrl="ngModel" required>
                 <div class="valid-feedback">
                   Looks good!
                 </div>
               </div>
               <div class="col-md-4 mb-3">
                 <label for="validationCustom03">Anno</label>
-                <input type="text" class="form-control" id="validationCustom03" placeholder="Anno" [(ngModel)]="age" name="age" #ctrl="ngModel" required>
+                <input type="text" class="form-control" id="validationCustom03" placeholder="" [(ngModel)]="age" name="age" #ctrl="ngModel" required>
                 <div class="valid-feedback">
                   Looks good!
                 </div>
@@ -49,14 +49,14 @@
             <div class="form-row">
               <div class="col-md-4 mb-3">
                 <label for="validationCustom03">Squadra Attuale</label>
-                <input type="text" class="form-control" id="validationCustom04" placeholder="Squadra" [(ngModel)]="team" name="team" #ctrl="ngModel" [disabled]="true" required>
+                <input type="text" class="form-control" id="validationCustom04" placeholder="" [(ngModel)]="team" name="team" #ctrl="ngModel" [disabled]="true" required>
                 <div class="invalid-feedback">
                   Please provide a valid city.
                 </div>
               </div>
               <div class="col-md-4 mb-3">
                 <label for="validationCustom03">Provenienza</label>
-                <input type="text" class="form-control" id="validationCustom04" placeholder="Provenienza" [(ngModel)]="lastteam" name="lastteam" #ctrl="ngModel" [disabled]="true" required>
+                <input type="text" class="form-control" id="validationCustom04" placeholder="" [(ngModel)]="lastteam" name="lastteam" #ctrl="ngModel" [disabled]="true" required>
                 <div class="invalid-feedback">
                   Please provide a valid city.
                 </div>
@@ -85,7 +85,7 @@
             <div class="form-row">
               <div class="col-md-12 mb-3">
                 <label for="validationCustom">Dettagli</label>
-                <textarea name="text" id="details" class="form-control" placeholder="Dettagli" [(ngModel)]="details"></textarea>
+                <textarea name="text" id="details" class="form-control" placeholder="" [(ngModel)]="details"></textarea>
               </div>
             </div>
           </fieldset>
