--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -25,21 +25,21 @@
           <div class="form-row">
             <div class="col-md-4 mb-3">
               <label for="validationCustom01">Nome</label>
-              <input type="text" class="form-control" id="validationCustom01" placeholder="Nome" [(ngModel)]="teamName" name="teamName" #ctrl="ngModel" [readonly]="isReadOnly" required>
+              <input type="text" class="form-control" id="validationCustom01" placeholder="" [(ngModel)]="teamName" name="teamName" #ctrl="ngModel" [readonly]="isReadOnly" required>
               <div class="valid-feedback">
                 Looks good!
               </div>
             </div>
             <div class="col-md-4 mb-3">
               <label for="validationCustom02">Città</label>
-              <input type="text" class="form-control" id="validationCustom02" placeholder="Città" [(ngModel)]="teamCity" name="teamCity" #ctrl="ngModel" [readonly]="isReadOnly" required>
+              <input type="text" class="form-control" id="validationCustom02" placeholder="" [(ngModel)]="teamCity" name="teamCity" #ctrl="ngModel" [readonly]="isReadOnly" required>
               <div class="valid-feedback">
                 Looks good!
               </div>
             </div>
             <div class="col-md-4 mb-3">
               <label for="validationCustom03">Mister</label>
-              <input type="text" class="form-control" id="validationCustom03" placeholder="Mister" [(ngModel)]="teamMister" name="teamMister" #ctrl="ngModel" [readonly]="isReadOnly" required>
+              <input type="text" class="form-control" id="validationCustom03" placeholder="" [(ngModel)]="teamMister" name="teamMister" #ctrl="ngModel" [readonly]="isReadOnly" required>
               <div class="valid-feedback">
                 Looks good!
               </div>
@@ -48,7 +48,7 @@
           <div class="form-row">
             <div class="col-md-6 mb-3">
               <label for="validationCustom03">Categoria</label>
-              <input type="text" class="form-control" id="validationCustom04" placeholder="Categoria" [(ngModel)]="teamCategory" name="teamCategory" #ctrl="ngModel" [readonly]="isReadOnly" required>
+              <input type="text" class="form-control" id="validationCustom04" placeholder="" [(ngModel)]="teamCategory" name="teamCategory" #ctrl="ngModel" [readonly]="isReadOnly" required>
               <div class="invalid-feedback">
                 Please provide a valid city.
               </div>
