Aggiunto calendario (vuoto)

--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -73,7 +73,7 @@
           </a>
         </li>
         <li>
-          <a href="forms-controls.html">
+          <a [routerLink]='["/calendar"]'>
             <i class="metismenu-icon fas fa-calendar"></i>
             Calendario
           </a>
