--- a/FrontEnd/ClientApp/src/app/ranking/ranking.component.html
+++ b/FrontEnd/ClientApp/src/app/ranking/ranking.component.html
@@ -1,12 +1,57 @@
 <div class="app-main__outer">
   <div class="app-main__inner">
 
-
-    <div class="main-card mb-3 card">
-      <div class="card-body">
-        <h5 class="card-title">CLASSIFICA</h5>
-        
+    <div class="row mt-5">
+      <div class="col-md-12">
+        <div class="main-card mb-3 card">
+          <div class="card-header">
+            CLASSIFICA
+            <!--<div class="btn-actions-pane-right">
+            <div role="group" class="btn-group-sm btn-group">
+              <button class="active btn btn-focus">Last Week</button>
+              <button class="btn btn-focus">All Month</button>
+            </div>
+          </div>-->
+          </div>
+          <div class="table-responsive">
+            <table class="align-middle mb-0 table table-borderless table-striped table-hover">
+              <thead>
+                <tr>
+                  <th class="text-center">#</th>
+                  <th class="text-center">Squadra</th>
+                  <th class="text-center">Punti</th>
+                  <th class="text-center">Giocate</th>
+                  <th class="text-center">Vinte</th>
+                  <th class="text-center">Pareggiate</th>
+                  <th class="text-center">Perse</th>
+                  <th class="text-center">Gol Fatti</th>
+                  <th class="text-center">Gol Subiti</th>
+                  <th class="text-center">Diff. Reti</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let r of ranking">
+                  <td class="text-center text-muted">#345</td>
+                  <td class="text-center">{{r.team}}</td>
+                  <td class="text-center">{{r.points}}</td>
+                  <td class="text-center">{{r.games}}</td>
+                  <td class="text-center">{{r.wins}}</td>
+                  <td class="text-center">{{r.draws}}</td>
+                  <td class="text-center">{{r.losts}}</td>
+                  <td class="text-center">{{r.goalMade}}</td>
+                  <td class="text-center">{{r.goalConceded}}</td>
+                  <td class="text-center">{{r.goalDifference}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <!--<div class="d-block text-center card-footer">
+          <button class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
+          <button class="btn-wide btn btn-success">Save</button>
+        </div>-->
+        </div>
       </div>
     </div>
+
   </div>
 </div>
