--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -79,38 +79,38 @@
           </a>
         </li>
         <li>
-          <a href="forms-layouts.html">
+          <a>
             <i class="metismenu-icon fas fa-chart-bar"></i>
             Classifica
             <i class="metismenu-state-icon fas fa-angle-down"></i>
           </a>
           <ul>
             <li>
-              <a href="elements-buttons-standard.html">
+              <a [routerLink]='["/ranking/all"]'>
                 <i class="metismenu-icon"></i>
                 Classifica
               </a>
             </li>
             <li>
-              <a href="elements-buttons-standard.html">
+              <a [routerLink]='["/ranking/home"]'>
                 <i class="metismenu-icon"></i>
                 Classifica in casa
               </a>
             </li>
             <li>
-              <a href="elements-buttons-standard.html">
+              <a [routerLink]='["/ranking/away"]'>
                 <i class="metismenu-icon"></i>
                 Classifica in trasferta
               </a>
             </li>
             <li>
-              <a href="elements-buttons-standard.html">
+              <a [routerLink]='["/ranking/scoredGoals"]'>
                 <i class="metismenu-icon"></i>
                 Classifica miglior attacco
               </a>
             </li>
             <li>
-              <a href="elements-buttons-standard.html">
+              <a [routerLink]='["/ranking/concededGoals"]'>
                 <i class="metismenu-icon"></i>
                 Classifica miglior difesa
               </a>
