--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -159,7 +159,7 @@
                     <td class="text-center">{{g.golTeamHome}} - {{g.golTeamAway}}</td>
                     <td class="text-left">{{g.teamAway}}</td>
                     <td>
-                      <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailGame(g.idGame)">
+                      <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailGame(g.id)">
                         <i class="fas fa-search"></i>
                       </button>
                     </td>
