--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -154,7 +154,7 @@
               <table class="mb-0 table table-sm">
                 <tbody>
                   <tr *ngFor="let g of games">
-                    <td class="text-center">{{g.round}}° Giornata</td>
+                    <td class="text-center">{{g.roundNumber}}° Giornata</td>
                     <td class="text-right">{{g.teamHome}}</td>
                     <td class="text-center">{{g.golTeamHome}} - {{g.golTeamAway}}</td>
                     <td class="text-left">{{g.teamAway}}</td>
