Aggiunta pagina marcatori

--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -118,7 +118,7 @@
           </ul>
         </li>
         <li>
-          <a href="forms-validation.html">
+          <a [routerLink]='["/scorer"]'>
             <i class="metismenu-icon fas fa-futbol"></i>
             Marcatori
           </a>
